feat: se agregaron servicios para reportes de seguimiento por parte de JEFE_DEPENDENCIA
